# alkanes-witness-proxy

./: Cargo.toml  README.md  build.rs
alkanes/diesel-proxy/: Cargo.toml
alkanes/diesel-proxy/src/: lib.rs
alkanes/witness-proxy/: Cargo.toml
alkanes/witness-proxy/src/: lib.rs
src/: lib.rs
src/tests/: mod.rs  test_busd.rs  test_diesel_proxy.rs  test_witness_proxy.rs
src/tests/precompiled/: alkanes_std_test.wasm
src/tests/std/: bUSD_build.rs  diesel_proxy_build.rs  mod.rs  witness_proxy_build.rs
